WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131924
REGRESSION (
r166784
): Gradient at background of iCloud login page doesn’t go all the way to the bottom
https://bugs.webkit.org/show_bug.cgi?id=131924
Summary
REGRESSION (r166784): Gradient at background of iCloud login page doesn’t go ...
mitz
Reported
2014-04-20 22:05:49 PDT
To reproduce: navigate to the URL (log out of iCloud if necessary). There is a gap between the bottom of the page and where the gradient ends, leaving a lighter-colored strip at the bottom. This was introduced in <
http://trac.webkit.org/r166784
>, the fix for
bug 131144
.
Attachments
Test reduction
(1.13 KB, text/html)
2014-04-21 09:53 PDT
,
alan
no flags
Details
Patch
(9.46 KB, patch)
2014-04-21 13:35 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-10 for mac-mountainlion-wk2
(681.52 KB, application/zip)
2014-04-21 14:40 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-04 for mac-mountainlion
(670.19 KB, application/zip)
2014-04-21 14:41 PDT
,
Build Bot
no flags
Details
Patch
(8.51 KB, patch)
2014-04-21 14:54 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2014-04-20 22:06:52 PDT
<
rdar://problem/16672414
>
alan
Comment 2
2014-04-20 22:10:47 PDT
Interestingly, that's a multi device pixel gap.
alan
Comment 3
2014-04-21 09:53:07 PDT
Created
attachment 229803
[details]
Test reduction
alan
Comment 4
2014-04-21 12:49:13 PDT
Apparently LayoutUnit precision is not high enough to calculate scale values for contain/cover. Patch is coming up.
alan
Comment 5
2014-04-21 13:35:45 PDT
Created
attachment 229827
[details]
Patch
Simon Fraser (smfr)
Comment 6
2014-04-21 13:42:27 PDT
Comment on
attachment 229827
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=229827&action=review
> Source/WebCore/ChangeLog:15 > + revealed that tile size computation gives correct results more often when snapping does not dependw on the location.
dependw
Build Bot
Comment 7
2014-04-21 14:39:58 PDT
Comment on
attachment 229827
[details]
Patch
Attachment 229827
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/5541439836520448
New failing tests: fast/backgrounds/hidpi-generated-gradient-background-on-subpixel-position.html fast/backgrounds/hidpi-background-image-contain-cover-scale-needs-more-precision.html
Build Bot
Comment 8
2014-04-21 14:40:01 PDT
Created
attachment 229834
[details]
Archive of layout-test-results from webkit-ews-10 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-10 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Build Bot
Comment 9
2014-04-21 14:41:54 PDT
Comment on
attachment 229827
[details]
Patch
Attachment 229827
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/4626646162210816
New failing tests: fast/backgrounds/hidpi-generated-gradient-background-on-subpixel-position.html
Build Bot
Comment 10
2014-04-21 14:41:57 PDT
Created
attachment 229835
[details]
Archive of layout-test-results from webkit-ews-04 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-04 Port: mac-mountainlion Platform: Mac OS X 10.8.5
alan
Comment 11
2014-04-21 14:54:04 PDT
Created
attachment 229837
[details]
Patch
alan
Comment 12
2014-04-21 14:54:17 PDT
Comment on
attachment 229837
[details]
Patch EWS
WebKit Commit Bot
Comment 13
2014-04-21 17:16:03 PDT
Comment on
attachment 229837
[details]
Patch Clearing flags on attachment: 229837 Committed
r167637
: <
http://trac.webkit.org/changeset/167637
>
WebKit Commit Bot
Comment 14
2014-04-21 17:16:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug