REGRESSION (r166784): Gradient at background of iCloud login page doesn’t go all the way to the bottom https://bugs.webkit.org/show_bug.cgi?id=131924

Computing tile dimension for contain/cover requires higher precision than what LayoutUnit has. Switching to floats.

Reviewed by Simon Fraser.

Source/WebCore:
Test: fast/backgrounds/hidpi-background-image-contain-cover-scale-needs-more-precision.html

* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::calculateFillTileSize):

LayoutTests:
* fast/backgrounds/hidpi-background-image-contain-cover-scale-needs-more-precision-expected.html: Added.
* fast/backgrounds/hidpi-background-image-contain-cover-scale-needs-more-precision.html: Added.


Canonical link: https://commits.webkit.org/150055@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167637 268f45cc-cd09-0410-ab3c-d52691b4dbfc